@@ -23,7 +23,6 @@ import io.activej.serializer.annotations.SerializeNullable;
 import java.io.Serial;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.EqualsAndHashCode;
 import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
@@ -40,8 +39,6 @@ import org.polypheny.db.catalog.exceptions.GenericRuntimeException;
 import org.polypheny.db.catalog.logistic.DataModel;
 import org.polypheny.db.catalog.logistic.EntityType;
 import org.polypheny.db.schema.ColumnStrategy;
-import org.polypheny.db.type.entity.PolyString;
-import org.polypheny.db.type.entity.PolyValue;
 
 @EqualsAndHashCode(callSuper = false)
 @SuperBuilder(toBuilder = true)
@@ -73,26 +70,6 @@ public class LogicalTable extends LogicalEntity {
     }
 
 
-    // Used for creating ResultSets
-    @Override
-    public PolyValue[] getParameterArray() {
-        return new PolyValue[]{
-                PolyString.of( Catalog.DATABASE_NAME ),
-                PolyString.of( getNamespaceName() ),
-                PolyString.of( name ),
-                PolyString.of( entityType.name() ),
-                PolyString.of( "" ),
-                null,
-                null,
-                null,
-                null,
-                null,
-                PolyString.of( Catalog.USER_NAME )
-
-        };
-    }
-
-
     @Override
     public AlgDataType getTupleType() {
         final AlgDataTypeFactory.Builder fieldInfo = AlgDataTypeFactory.DEFAULT.builder();
@@ -113,7 +90,7 @@ public class LogicalTable extends LogicalEntity {
 
 
     public List<ColumnStrategy> getColumnStrategies() {
-        return getColumns().stream().map( c -> c.nullable ? ColumnStrategy.NULLABLE : ColumnStrategy.NOT_NULLABLE ).collect( Collectors.toList() );
+        return getColumns().stream().map( c -> c.nullable ? ColumnStrategy.NULLABLE : ColumnStrategy.NOT_NULLABLE ).toList();
     }
 
 
@@ -123,12 +100,12 @@ public class LogicalTable extends LogicalEntity {
 
 
     public List<Long> getColumnIds() {
-        return getColumns().stream().sorted( Comparator.comparingInt( a -> a.position ) ).map( c -> c.id ).collect( Collectors.toList() );
+        return getColumns().stream().sorted( Comparator.comparingInt( a -> a.position ) ).map( c -> c.id ).toList();
     }
 
 
     public List<String> getColumnNames() {
-        return getColumns().stream().map( c -> c.name ).collect( Collectors.toList() );
+        return getColumns().stream().map( c -> c.name ).toList();
     }
 
 
