@@ -20,7 +20,6 @@ package org.polypheny.db.sql.language.ddl.altertable;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 import lombok.EqualsAndHashCode;
 import lombok.NonNull;
 import lombok.Value;
@@ -140,7 +139,7 @@ public class SqlAlterTableModifyPlacement extends SqlAlterTable {
 
         DdlManager.getInstance().modifyPlacement(
                 table,
-                getColumns( context, table.id, columns ).stream().map( c -> c.id ).collect( Collectors.toList() ),
+                getColumns( context, table.id, columns ).stream().map( c -> c.id ).toList(),
                 partitionGroups,
                 partitionGroupNames.stream()
                         .map( SqlIdentifier::toString )
